--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -12,9 +12,12 @@
 }
 
 body{
+    background: linear-gradient(to top, rgba(24, 24, 25, 0.47), rgba(69, 71, 71, 0.65)), url('./../img/background.jpg') no-repeat top center ;
     background-size: cover;
-    background: url("./../img/background.jpg") no-repeat fixed !important;
 
+}
+h3,h2{
+    color: white;
 }
 li {
    border-bottom: 2px solid transparent;
